<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarKartuActivity"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:text="@string/pendaftaran"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/kartu_baru"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/uid"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/masukkan_uid_kartu"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edtDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/masukkan_nama_driver"
            android:minHeight="48dp"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            tools:ignore="TextContrastCheck"
            android:inputType="text"
            android:importantForAutofill="no" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/kendaraan"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edtTrasport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/masukkan_nama_kendaraan"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftarkan" />
</LinearLayout>